--- a/resourecs/css/style.css
+++ b/resourecs/css/style.css
@@ -4,55 +4,15 @@ body {
     font-family: 'Titillium Web', sans-serif;
     max-width: 114em;
 }
-
-
-
-/*Team section*/
-
-.team-section {
-    background: #0097e6;
-    padding: 5%;
-    text-align: center;
-}
-.team-section button {
-    display: flex;
-    justify-content: center;
+html {
+	font-size: 87%;
 }
 
-.team-section p {
-    text-align: center;
-    margin: 2em 0;
-    color: #636e72;
-}
-.cantainer {
-    background: #fff;
-    padding: 2% 5%;
-    border-radius: .8em;
-}
-.team-title {
-    padding: 0 10%;
+.card {
+    position: relative;
 }
 
-.team-info {
-    text-align: center;
-    
+.card a span {
+    position: absolute;
+    right: 1em;
 }
-.team-info ul li {
-    display: inline;
-}
-.team-info a i {
-    text-decoration: none;
-}
-.team-info i:hover {
-    cursor: pointer;
-}
-
-.team-info  img{
-    border-radius: 50%;
-    margin-bottom: 2em;
-}
-
-.team-info h3 {
-    margin-bottom: 0;
-}
-
